[package]
name = "ape-mbr"
version = "0.1.1"
edition = "2021"
authors = ["Charles Thompson"]
license = "MIT"
readme = "README.md"
keywords = ["mbr", "filesystem", "no_std", "embedded"]
catagories = ["filesystem", "embedded", "no_std"]
description = "simple crate to interface between a disk and it's partitions"
repository = "https://github.com/Gip-Gip/ape-mbr"
exclude = [
    "resources/*",
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-io = "0.4.0"
num_enum = { version = "0.6.1", default-features = false }

[dev-dependencies]

embedded-io = { features = ["std"], version = "0.4.0" }
ape-fatfs = "0.1.0"
